--- a/shopping/cart.html
+++ b/shopping/cart.html
@@ -8,8 +8,8 @@
   <link rel="shortcut icon"
     href="https://lh3.googleusercontent.com/pw/ACtC-3cY3VQa6m8HbZC0WglhAMsU0DtfmnuX0fcAqmIYzLhrVNjOVWjfObPGQSa9pNu2YMd3tVn5yUjIDtWvRFh6-JTS9eYHVTqKVuGXM5QIim-nf_woJ518omSqMqMZNo8igIuhnwFAriGWEPnuNO92Mfr7=w120-h70-no?authuser=1"
     type="">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/all.css">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/all.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
     input[type="text"] {
@@ -29,7 +29,7 @@
     <header class="container-fluid">
       <nav class="navbar navbar-expand-md mynav bg-chocolate">
         <!-- Brand -->
-        <a class="navbar-brand" href="shopping.html">
+        <a class="navbar-brand" href="./shopping.html">
           <img
             src="https://lh3.googleusercontent.com/pw/ACtC-3cY3VQa6m8HbZC0WglhAMsU0DtfmnuX0fcAqmIYzLhrVNjOVWjfObPGQSa9pNu2YMd3tVn5yUjIDtWvRFh6-JTS9eYHVTqKVuGXM5QIim-nf_woJ518omSqMqMZNo8igIuhnwFAriGWEPnuNO92Mfr7=w120-h70-no?authuser=1"
             style="width: 85%;">
@@ -44,19 +44,19 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav act-hov">
             <li class="nav-item active">
-              <a class="nav-link" href="shopping.html">首頁</a>
+              <a class="nav-link" href="./shopping.html">首頁</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">關於公司</a>
+              <a class="nav-link" href="./about.html">關於公司</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="shop.html">商品商城</a>
+              <a class="nav-link" href="./shop.html">商品商城</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="job.html">人力資源</a>
+              <a class="nav-link" href="./job.html">人力資源</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">聯絡我們</a>
+              <a class="nav-link" href="./contact.html">聯絡我們</a>
             </li>
           </ul>
           <!-- <div class="ml-auto nav-btn">
@@ -98,7 +98,7 @@
         <div class="row">
           <div class="col-md-4 col-sm-4">已經選了 <em class="amt">0</em> 件商品</div>
           <div class="col-md-4 col-sm-4">總價: <em class="amt2">0</em> 元</div>
-          <a href="checkout.html" id="DownLoadAudio" target="_self" class="col-md-4 col-sm-4">
+          <a href="./checkout.html" id="DownLoadAudio" target="_self" class="col-md-4 col-sm-4">
             <button type="submit" class="btn bg-wheat send-btn ml-auto">前往訂單</button>
           </a>
         </div>
@@ -113,19 +113,19 @@
         <div class="col-md-6 mb-4">
           <ul class="footer-menu act-hov">
             <li class="nav-item">
-              <a class="nav-link" href="shopping.html">首頁</a>
+              <a class="nav-link" href="./shopping.html">首頁</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">關於公司</a>
+              <a class="nav-link" href="./about.html">關於公司</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="shop.html">商品商城</a>
+              <a class="nav-link" href="./shop.html">商品商城</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="job.html">人力資源</a>
+              <a class="nav-link" href="./job.html">人力資源</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">聯絡我們</a>
+              <a class="nav-link" href="./contact.html">聯絡我們</a>
             </li>
           </ul>
         </div>
@@ -147,13 +147,13 @@
 
     <!-- float-box -->
     <div class="float-box">
-      <a class="signin-btn" href="signin.html" title="登入/註冊">
+      <a class="signin-btn" href="./signin.html" title="登入/註冊">
         <i class="fa fa-user" style="font-size: 24px;"></i>
       </a>
-      <a class="shop-btn" href="cart.html" title="購物車">
+      <a class="shop-btn" href="./cart.html" title="購物車">
         <i class="fa fa-shopping-cart" style="font-size: 24px;"></i>
       </a>
-      <a class="checkout-btn" href="checkout.html" title="結帳">
+      <a class="checkout-btn" href="./checkout.html" title="結帳">
         <i class="fa fa-cc-visa" style="font-size: 24px;"></i>
       </a>
       <a class="gotop-btn" href="#" title="回頁首">
@@ -164,10 +164,10 @@
   </div>
 
 
-  <script src="js/jquery-3.5.1.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/cart.js"></script>
-  <script src="js/gotop.js"></script>
+  <script src="./js/jquery-3.5.1.min.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/cart.js"></script>
+  <script src="./js/gotop.js"></script>
 </body>
 
 </html>
