--- a/shopping/index.html
+++ b/shopping/index.html
@@ -18,7 +18,7 @@
 		<header class="container-fluid">
 			<nav class="navbar navbar-expand-md mynav bg-chocolate">
 			  <!-- Brand -->
-			  <a class="navbar-brand" href="./shopping.html">
+			  <a class="navbar-brand" href="./index.html">
 				<img
 				  src="https://lh3.googleusercontent.com/pw/ACtC-3cY3VQa6m8HbZC0WglhAMsU0DtfmnuX0fcAqmIYzLhrVNjOVWjfObPGQSa9pNu2YMd3tVn5yUjIDtWvRFh6-JTS9eYHVTqKVuGXM5QIim-nf_woJ518omSqMqMZNo8igIuhnwFAriGWEPnuNO92Mfr7=w120-h70-no?authuser=1"
 				  style="width: 85%;">
@@ -33,7 +33,7 @@
 			  <div class="collapse navbar-collapse" id="collapsibleNavbar">
 				<ul class="navbar-nav act-hov">
 				  <li class="nav-item active">
-					<a class="nav-link" href="./shopping.html">首頁</a>
+					<a class="nav-link" href="./index.html">首頁</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-link" href="./about.html">關於公司</a>
@@ -327,7 +327,7 @@
 			  <div class="col-md-6 mb-4">
 				<ul class="footer-menu act-hov">
 				  <li class="nav-item">
-					<a class="nav-link" href="./shopping.html">首頁</a>
+					<a class="nav-link" href="./index.html">首頁</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-link" href="./about.html">關於公司</a>
